--- a/install/kubernetes/prometheus/grafana/grafana.ini
+++ b/install/kubernetes/prometheus/grafana/grafana.ini
@@ -360,7 +360,7 @@ send_client_credentials_via_post = false
 
 #################################### Basic Auth ##########################
 [auth.basic]
-enabled = true
+enabled = false
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
