--- a/install/kubernetes/prometheus/kube-state-metrics/kube-state-metrics-dp.yml
+++ b/install/kubernetes/prometheus/kube-state-metrics/kube-state-metrics-dp.yml
@@ -26,7 +26,7 @@ spec:
                 - "true"
       serviceAccountName: kube-state-metrics
       containers:
-      - image: bitnami/kube-rbac-proxy:0.14.1
+      - image: ccr.ccs.tencentyun.com/cube-studio/kube-rbac-proxy:0.14.1
         name: kube-rbac-proxy-main
         args:
         - --secure-listen-address=:8443
@@ -42,7 +42,7 @@ spec:
             cpu: 10m
             memory: 20Mi
       - name: kube-rbac-proxy-self
-        image: bitnami/kube-rbac-proxy:0.14.1
+        image: ccr.ccs.tencentyun.com/cube-studio/kube-rbac-proxy:0.14.1
         args:
         - --secure-listen-address=:9443
         - --upstream=http://127.0.0.1:8082/
