--- a/install/kubernetes/redis/redis.yaml
+++ b/install/kubernetes/redis/redis.yaml
@@ -48,7 +48,7 @@ spec:
         - name: redis
           securityContext:
             {}
-          image: "bitnami/redis:7.4"     # 6.2.12
+          image: "ccr.ccs.tencentyun.com/cube-studio/redis:7.4"     # 6.2.12
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 6379
